--- a/docs/docs-ref-autogen/outlook_1_2/outlook/office.messageread.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/outlook/office.messageread.yml
@@ -10,7 +10,7 @@ items:
 
       - [ItemRead](xref:outlook!Office.ItemRead:interface)
 
-      - [Message](xref:outlook!Office.Message:interface)
+      - [邮件](xref:outlook!Office.Message:interface)
     name: Office.MessageRead
     fullName: Office.MessageRead
     langs:
@@ -327,13 +327,13 @@ items:
         "This is a reply ALL with <b>some bold text</b>."
       );
       ```
-    name: 'displayReplyAllForm(formData, callback)'
-    fullName: 'displayReplyAllForm(formData, callback)'
+    name: displayReplyAllForm(formData)
+    fullName: displayReplyAllForm(formData)
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'displayReplyAllForm(formData: string | ReplyFormData, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
+      content: 'displayReplyAllForm(formData: string | ReplyFormData): void;'
       return:
         type:
           - void
@@ -343,10 +343,6 @@ items:
           description: '一个包含文本和 HTML 且表示答复窗体的正文的字符串。 该字符串限制为 32 KB 或包含 body 或附件数据以及回调函数的[ReplyFormData](xref:outlook!Office.ReplyFormData:interface)对象。'
           type:
             - 'outlook!Office.MessageRead#displayReplyAllForm~0:complex'
-        - id: callback
-          description: 可选。 方法完成后，使用单个参数调用在`callback`参数中传递的函数。`asyncResult`<!-- -->，它是一个`Office.AsyncResult`对象。
-          type:
-            - 'outlook!Office.MessageRead#displayReplyAllForm~1:complex'
   - uid: 'outlook!Office.MessageRead#displayReplyForm:member(1)'
     summary: |-
       显示答复窗体，其中仅包括所选邮件的发件人或所选约会的组织者。
@@ -454,13 +450,13 @@ items:
           }
       });
       ```
-    name: 'displayReplyForm(formData, callback)'
-    fullName: 'displayReplyForm(formData, callback)'
+    name: displayReplyForm(formData)
+    fullName: displayReplyForm(formData)
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'displayReplyForm(formData: string | ReplyFormData, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
+      content: 'displayReplyForm(formData: string | ReplyFormData): void;'
       return:
         type:
           - void
@@ -470,10 +466,6 @@ items:
           description: '一个包含文本和 HTML 且表示答复窗体的正文的字符串。 该字符串限制为 32 KB 或包含 body 或附件数据以及回调函数的[ReplyFormData](xref:outlook!Office.ReplyFormData:interface)对象。'
           type:
             - 'outlook!Office.MessageRead#displayReplyForm~0:complex'
-        - id: callback
-          description: 可选。 方法完成后，使用单个参数调用在`callback`参数中传递的函数。`asyncResult`<!-- -->，它是一个`Office.AsyncResult`对象。
-          type:
-            - 'outlook!Office.MessageRead#displayReplyForm~1:complex'
   - uid: 'outlook!Office.MessageRead#end:member'
     summary: |-
       获取约会结束的日期和时间。
@@ -1200,17 +1192,6 @@ references:
       - uid: 'outlook!Office.ReplyFormData:interface'
         name: ReplyFormData
         fullName: Office.ReplyFormData
-  - uid: 'outlook!Office.MessageRead#displayReplyAllForm~1:complex'
-    name: '(asyncResult: Office.AsyncResult<void>) => void'
-    fullName: '(asyncResult: Office.AsyncResult<void>) => void'
-    spec.typeScript:
-      - name: '(asyncResult: '
-        fullName: '(asyncResult: '
-      - uid: 'outlook!Office.AsyncResult:interface'
-        name: Office.AsyncResult
-        fullName: Office.AsyncResult
-      - name: <void>) => void
-        fullName: <void>) => void
   - uid: 'outlook!Office.MessageRead#displayReplyForm~0:complex'
     name: string | ReplyFormData
     fullName: string | Office.ReplyFormData
@@ -1220,17 +1201,6 @@ references:
       - uid: 'outlook!Office.ReplyFormData:interface'
         name: ReplyFormData
         fullName: Office.ReplyFormData
-  - uid: 'outlook!Office.MessageRead#displayReplyForm~1:complex'
-    name: '(asyncResult: Office.AsyncResult<void>) => void'
-    fullName: '(asyncResult: Office.AsyncResult<void>) => void'
-    spec.typeScript:
-      - name: '(asyncResult: '
-        fullName: '(asyncResult: '
-      - uid: 'outlook!Office.AsyncResult:interface'
-        name: Office.AsyncResult
-        fullName: Office.AsyncResult
-      - name: <void>) => void
-        fullName: <void>) => void
   - uid: 'outlook!Office.EmailAddressDetails:interface'
     name: EmailAddressDetails
   - uid: 'outlook!Office.Entities:interface'
