commit bilingual contents

--- a/docs/docs-ref-autogen/office/office/office.asynccontextoptions.yml
+++ b/docs/docs-ref-autogen/office/office/office.asynccontextoptions.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!Office.AsyncContextOptions:interface'
-    summary: '<span data-ttu-id="da438-101">提供一个选项，用于保留任何类型的未更改的上下文数据，以供在回调中使用。</span><span class="sxs-lookup"><span data-stu-id="da438-101">Provides an option for preserving context data of any type, unchanged, for use in a callback.</span></span>'
+    summary: 提供一个选项，用于保留任何类型的未更改的上下文数据，以供在回调中使用。
     name: Office.AsyncContextOptions
     fullName: Office.AsyncContextOptions
     langs:
@@ -11,7 +11,7 @@ items:
     children:
       - 'office!Office.AsyncContextOptions#asyncContext:member'
   - uid: 'office!Office.AsyncContextOptions#asyncContext:member'
-    summary: '<span data-ttu-id="da438-102">在传递给回调的 AsyncResult 对象的 asyncContext 属性中返回的、任何类型的用户定义的项目未更改。</span><span class="sxs-lookup"><span data-stu-id="da438-102">A user-defined item of any type that is returned, unchanged, in the asyncContext property of the AsyncResult object that is passed to a callback.</span></span>'
+    summary: 在传递给回调的`asyncContext` `AsyncResult`对象的属性中，返回的任何类型的用户定义的项目未更改。
     name: asyncContext
     fullName: asyncContext
     langs:
