--- a/docs/docs-ref-autogen/onenote/toc.yml
+++ b/docs/docs-ref-autogen/onenote/toc.yml
@@ -25,7 +25,7 @@ items:
                 uid: 'onenote!OneNote.PageContentType:enum'
               - name: ParagraphType
                 uid: 'onenote!OneNote.ParagraphType:enum'
-          - name: Application
+          - name: 应用程序
             uid: 'onenote!OneNote.Application:class'
           - name: FloatingInk
             uid: 'onenote!OneNote.FloatingInk:class'
@@ -205,6 +205,8 @@ items:
                 uid: 'office!Office.Dialog:interface'
               - name: DialogOptions
                 uid: 'office!Office.DialogOptions:interface'
+              - name: DialogParentMessageReceivedEventArgs
+                uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
               - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
