--- a/docs/docs-ref-autogen/outlook/outlook/office.body.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.body.yml
@@ -577,7 +577,9 @@ items:
             - 'outlook!Office.Body#setSelectedDataAsync~2:complex'
   - uid: 'outlook!Office.Body#setSignatureAsync:member(1)'
     summary: |-
-      添加或替换电子邮件正文的签名。
+      添加或替换项目正文的签名。
+
+      **重要说明**：在 web 上的 Outlook `setSignatureAsync`中，仅适用于邮件。
 
       \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -590,6 +592,7 @@ items:
       - `DataExceedsMaximumSize`<!-- -->：参数`data`的长度超过30000个字符。
 
       - `InvalidFormatError`<!-- -->：此`options.coercionType`参数设置为`Office.CoercionType.Html` ，邮件正文为纯文本格式。
+    isPreview: true
     name: 'setSignatureAsync(data, options, callback)'
     fullName: 'setSignatureAsync(data, options, callback)'
     langs:
@@ -616,7 +619,9 @@ items:
             - 'outlook!Office.Body#setSignatureAsync~1:complex'
   - uid: 'outlook!Office.Body#setSignatureAsync:member(2)'
     summary: |-
-      添加或替换电子邮件正文的签名。
+      添加或替换项目正文的签名。
+
+      **重要说明**：在 web 上的 Outlook `setSignatureAsync`中，仅适用于邮件。
 
       \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -644,6 +649,7 @@ items:
         }
       });
       ```
+    isPreview: true
     name: 'setSignatureAsync(data, callback)'
     fullName: 'setSignatureAsync(data, callback)'
     langs:
