--- a/docs/docs-ref-autogen/outlook/outlook/office.mailboxenums.composetype.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.mailboxenums.composetype.yml
@@ -6,6 +6,7 @@ items:
 
       \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写'
+    isPreview: true
     name: Office.MailboxEnums.ComposeType
     fullName: Office.MailboxEnums.ComposeType
     langs:
@@ -17,7 +18,11 @@ items:
       - 'outlook!Office.MailboxEnums.ComposeType.NewMail:member'
       - 'outlook!Office.MailboxEnums.ComposeType.Reply:member'
   - uid: 'outlook!Office.MailboxEnums.ComposeType.Forward:member'
-    summary: 前后.
+    summary: |-
+      前后.
+
+      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    isPreview: true
     name: Forward
     fullName: Forward
     langs:
@@ -25,7 +30,11 @@ items:
     type: field
     numericValue: '"forward"'
   - uid: 'outlook!Office.MailboxEnums.ComposeType.NewMail:member'
-    summary: 新邮件。
+    summary: |-
+      新邮件。
+
+      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    isPreview: true
     name: NewMail
     fullName: NewMail
     langs:
@@ -33,7 +42,11 @@ items:
     type: field
     numericValue: '"newMail"'
   - uid: 'outlook!Office.MailboxEnums.ComposeType.Reply:member'
-    summary: 响应.
+    summary: |-
+      响应.
+
+      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    isPreview: true
     name: Reply
     fullName: Reply
     langs:
