--- a/docs/docs-ref-autogen/excel_1_1/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_1/toc.yml
@@ -54,7 +54,7 @@ items:
           - name: 图标集
             uid: ''
             items: []
-          - name: Application
+          - name: 应用程序
             uid: 'excel!Excel.Application:class'
           - name: Binding
             uid: 'excel!Excel.Binding:class'
@@ -258,6 +258,8 @@ items:
                 uid: 'office!Office.Dialog:interface'
               - name: DialogOptions
                 uid: 'office!Office.DialogOptions:interface'
+              - name: DialogParentMessageReceivedEventArgs
+                uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
               - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
