--- a/docs/docs-ref-autogen/excel_1_7/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_7/toc.yml
@@ -198,7 +198,7 @@ items:
                 uid: 'excel!Excel.ThreeTrafficLights2Set:interface'
               - name: ThreeTrianglesSet
                 uid: 'excel!Excel.ThreeTrianglesSet:interface'
-          - name: Application
+          - name: 应用程序
             uid: 'excel!Excel.Application:class'
           - name: Binding
             uid: 'excel!Excel.Binding:class'
@@ -396,7 +396,7 @@ items:
             uid: 'excel!Excel.SelectionChangedEventArgs:interface'
           - name: 会话
             uid: 'excel!Excel.Session:class'
-          - name: Setting
+          - name: 设置
             uid: 'excel!Excel.Setting:class'
           - name: SettingCollection
             uid: 'excel!Excel.SettingCollection:class'
@@ -560,6 +560,8 @@ items:
                 uid: 'office!Office.Dialog:interface'
               - name: DialogOptions
                 uid: 'office!Office.DialogOptions:interface'
+              - name: DialogParentMessageReceivedEventArgs
+                uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
               - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
