--- a/docs/docs-ref-autogen/outlook/outlook/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.messagecompose.yml
@@ -800,10 +800,11 @@ items:
       对于 Windows 和 Mac 富客户端，此 API 会将发送帐户的 "新建邮件" 和 "答复/转发" 部分的签名设置为 "（无）"，从而有效地禁用该签名。 对于 web 上的 Outlook，API 应禁用新邮件、答复和转发的签名选项。 如果选择了签名，此 API 调用应禁用它。
 
       \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-
+    remarks: |-
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadWriteItem`
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/#extension-points)<!-- -->**：邮件撰写
+    isPreview: true
     name: 'disableClientSignatureAsync(options, callback)'
     fullName: 'disableClientSignatureAsync(options, callback)'
     langs:
@@ -831,10 +832,24 @@ items:
       对于 Windows 和 Mac 富客户端，此 API 会将发送帐户的 "新建邮件" 和 "答复/转发" 部分的签名设置为 "（无）"，从而有效地禁用该签名。 对于 web 上的 Outlook，API 应禁用新邮件、答复和转发的签名选项。 如果选择了签名，此 API 调用应禁用它。
 
       \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-
+    remarks: |-
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadWriteItem`
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/#extension-points)<!-- -->**：邮件撰写
+
+      #### <a name="examples"></a>示例
+
+      ```javascript
+      // Disable the client signature.
+      Office.context.mailbox.item.disableClientSignatureAsync(function(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+          console.log("disableClientSignatureAsync succeeded");
+        } else {
+          console.error(asyncResult.error);
+        }
+      });
+      ```
+    isPreview: true
     name: disableClientSignatureAsync(callback)
     fullName: disableClientSignatureAsync(callback)
     langs:
@@ -845,21 +860,7 @@ items:
       return:
         type:
           - void
-        description: |-
-
-
-          #### <a name="examples"></a>示例
-
-          ```javascript
-          // Disable the client signature.
-          Office.context.mailbox.item.disableClientSignatureAsync(function(asyncResult) {
-            if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
-              console.log("disableClientSignatureAsync succeeded");
-            } else {
-              console.error(asyncResult.error);
-            }
-          });
-          ```
+        description: ''
       parameters:
         - id: callback
           description: 可选。 方法完成后，使用单个参数调用在 callback 参数中传递的函数。`asyncResult`<!-- -->，它是一个`Office.AsyncResult`对象。
@@ -1157,11 +1158,15 @@ items:
           type:
             - 'outlook!Office.MessageCompose#getAttachmentsAsync~1:complex'
   - uid: 'outlook!Office.MessageCompose#getComposeTypeAsync:member(1)'
-    summary: 指定邮件撰写的类型及其强制类型。 邮件可以是新邮件，也可以是答复或转发邮件。 强制类型可以是 HTML 格式，也可以是纯文本。
+    summary: |-
+      指定邮件撰写的类型及其强制类型。 邮件可以是新邮件，也可以是答复或转发邮件。 强制类型可以是 HTML 格式，也可以是纯文本。
+
+      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/#extension-points)<!-- -->**：邮件撰写
+    isPreview: true
     name: 'getComposeTypeAsync(options, callback)'
     fullName: 'getComposeTypeAsync(options, callback)'
     langs:
@@ -1179,14 +1184,14 @@ items:
           type:
             - 'outlook!Office.AsyncContextOptions:interface'
         - id: callback
-          description: |-
-            方法完成后，使用单个参数类型调用在`callback`参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，该`asyncResult.value`属性将包含具有项目的撰写类型和强制类型的对象。
-
-            \[Api 集：邮箱预览\]
+          description: 方法完成后，使用单个参数类型调用在`callback`参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，该`asyncResult.value`属性将包含具有项目的撰写类型和强制类型的对象。
           type:
             - 'outlook!Office.MessageCompose#getComposeTypeAsync~0:complex'
   - uid: 'outlook!Office.MessageCompose#getComposeTypeAsync:member(2)'
-    summary: 指定邮件撰写的类型及其强制类型。 邮件可以是新邮件，也可以是答复或转发邮件。 强制类型可以是 HTML 格式，也可以是纯文本。
+    summary: |-
+      指定邮件撰写的类型及其强制类型。 邮件可以是新邮件，也可以是答复或转发邮件。 强制类型可以是 HTML 格式，也可以是纯文本。
+
+      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
 
@@ -1209,6 +1214,7 @@ items:
         }
       });
       ```
+    isPreview: true
     name: getComposeTypeAsync(callback)
     fullName: getComposeTypeAsync(callback)
     langs:
@@ -1222,10 +1228,7 @@ items:
         description: 一个对象， `ComposeType`包含`CoercionType`和枚举该邮件项目的枚举值。
       parameters:
         - id: callback
-          description: |-
-            方法完成后，使用单个参数类型调用在`callback`参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，该`asyncResult.value`属性将包含具有项目的撰写类型和强制类型的对象。
-
-            \[Api 集：邮箱预览\]
+          description: 方法完成后，使用单个参数类型调用在`callback`参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，该`asyncResult.value`属性将包含具有项目的撰写类型和强制类型的对象。
           type:
             - 'outlook!Office.MessageCompose#getComposeTypeAsync~1:complex'
   - uid: 'outlook!Office.MessageCompose#getInitializationContextAsync:member(1)'
@@ -1666,6 +1669,7 @@ items:
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/#extension-points)<!-- -->**：邮件撰写
+    isPreview: true
     name: 'isClientSignatureEnabledAsync(options, callback)'
     fullName: 'isClientSignatureEnabledAsync(options, callback)'
     langs:
@@ -1710,6 +1714,7 @@ items:
         }
       });
       ```
+    isPreview: true
     name: isClientSignatureEnabledAsync(callback)
     fullName: isClientSignatureEnabledAsync(callback)
     langs:
