--- a/docs/docs-ref-autogen/outlook_1_6/toc.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/toc.yml
@@ -68,7 +68,7 @@ items:
             uid: 'outlook!Office.NotificationMessages:interface'
           - name: PhoneNumber
             uid: 'outlook!Office.PhoneNumber:interface'
-          - name: Recipients
+          - name: 收件人
             uid: 'outlook!Office.Recipients:interface'
           - name: ReplyFormAttachment
             uid: 'outlook!Office.ReplyFormAttachment:interface'
@@ -188,6 +188,8 @@ items:
                 uid: 'office!Office.Dialog:interface'
               - name: DialogOptions
                 uid: 'office!Office.DialogOptions:interface'
+              - name: DialogParentMessageReceivedEventArgs
+                uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
               - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
