--- a/docs/docs-ref-autogen/outlook_1_7/toc.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/toc.yml
@@ -84,7 +84,7 @@ items:
             uid: 'outlook!Office.Organizer:interface'
           - name: PhoneNumber
             uid: 'outlook!Office.PhoneNumber:interface'
-          - name: Recipients
+          - name: 收件人
             uid: 'outlook!Office.Recipients:interface'
           - name: RecipientsChangedEventArgs
             uid: 'outlook!Office.RecipientsChangedEventArgs:interface'
@@ -218,6 +218,8 @@ items:
                 uid: 'office!Office.Dialog:interface'
               - name: DialogOptions
                 uid: 'office!Office.DialogOptions:interface'
+              - name: DialogParentMessageReceivedEventArgs
+                uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
               - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
