--- a/docs/docs-ref-autogen/powerpoint/toc.yml
+++ b/docs/docs-ref-autogen/powerpoint/toc.yml
@@ -110,6 +110,8 @@ items:
                 uid: 'office!Office.Dialog:interface'
               - name: DialogOptions
                 uid: 'office!Office.DialogOptions:interface'
+              - name: DialogParentMessageReceivedEventArgs
+                uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
               - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
