--- a/docs/docs-ref-autogen/visio/toc.yml
+++ b/docs/docs-ref-autogen/visio/toc.yml
@@ -19,7 +19,7 @@ items:
                 uid: 'visio!Visio.OverlayVerticalAlignment:enum'
               - name: ToolBarType
                 uid: 'visio!Visio.ToolBarType:enum'
-          - name: Application
+          - name: 应用程序
             uid: 'visio!Visio.Application:class'
           - name: BoundingBox
             uid: 'visio!Visio.BoundingBox:interface'
@@ -177,6 +177,8 @@ items:
                 uid: 'office!Office.Dialog:interface'
               - name: DialogOptions
                 uid: 'office!Office.DialogOptions:interface'
+              - name: DialogParentMessageReceivedEventArgs
+                uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
               - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
