--- a/docs/docs-ref-autogen/word/toc.yml
+++ b/docs/docs-ref-autogen/word/toc.yml
@@ -59,7 +59,7 @@ items:
                 uid: 'word!Word.UnderlineType:enum'
               - name: VerticalAlignment
                 uid: 'word!Word.VerticalAlignment:enum'
-          - name: Application
+          - name: 应用程序
             uid: 'word!Word.Application:class'
           - name: 正文
             uid: 'word!Word.Body:class'
@@ -113,7 +113,7 @@ items:
             uid: 'word!Word.Section:class'
           - name: SectionCollection
             uid: 'word!Word.SectionCollection:class'
-          - name: Setting
+          - name: 设置
             uid: 'word!Word.Setting:class'
           - name: SettingCollection
             uid: 'word!Word.SettingCollection:class'
@@ -235,6 +235,8 @@ items:
                 uid: 'office!Office.Dialog:interface'
               - name: DialogOptions
                 uid: 'office!Office.DialogOptions:interface'
+              - name: DialogParentMessageReceivedEventArgs
+                uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
               - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
