--- a/docs/docs-ref-autogen/word_1_3/toc.yml
+++ b/docs/docs-ref-autogen/word_1_3/toc.yml
@@ -59,7 +59,7 @@ items:
                 uid: 'word!Word.UnderlineType:enum'
               - name: VerticalAlignment
                 uid: 'word!Word.VerticalAlignment:enum'
-          - name: Application
+          - name: 应用程序
             uid: 'word!Word.Application:class'
           - name: 正文
             uid: 'word!Word.Body:class'
@@ -223,6 +223,8 @@ items:
                 uid: 'office!Office.Dialog:interface'
               - name: DialogOptions
                 uid: 'office!Office.DialogOptions:interface'
+              - name: DialogParentMessageReceivedEventArgs
+                uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
               - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
