--- a/docs/docs-ref-autogen/outlook/outlook/office.mastercategories.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.mastercategories.yml
@@ -4,7 +4,9 @@ items:
     summary: |-
       代表邮箱上的类别主列表。
 
-      在 Outlook 中，用户可以使用类别对邮件和约会进行颜色编码。 用户在其邮箱的主列表中定义类别。 然后，他们可以将一个或多个类别应用于项目。
+      在 Outlook 中，用户可以通过使用类别对邮件和约会进行着色以对其进行标记。 用户在其邮箱的主列表中定义类别。 然后，他们可以将一个或多个类别应用于项目。
+
+      **重要说明**：在委派或共享方案中，代理可以获取主列表中的类别，但不能添加或删除类别。
 
       \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
