--- a/docs/docs-ref-autogen/outlook/outlook/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.messagecompose.yml
@@ -644,6 +644,8 @@ items:
     summary: |-
       获取一个对象，该对象提供用于管理项的类别的方法。
 
+      **重要说明**：在 web 上的 Outlook 中，不能在撰写模式下使用 API 来管理邮件的类别。
+
       \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
