--- a/docs/docs-ref-autogen/outlook/toc.yml
+++ b/docs/docs-ref-autogen/outlook/toc.yml
@@ -8,6 +8,8 @@ items:
         items:
           - name: MailboxEnums
             items:
+              - name: AppointmentSensitivityType
+                uid: 'outlook!Office.MailboxEnums.AppointmentSensitivityType:enum'
               - name: AttachmentContentFormat
                 uid: 'outlook!Office.MailboxEnums.AttachmentContentFormat:enum'
               - name: AttachmentStatus
@@ -88,6 +90,8 @@ items:
             uid: 'outlook!Office.From:interface'
           - name: InternetHeaders
             uid: 'outlook!Office.InternetHeaders:interface'
+          - name: IsAllDayEvent
+            uid: 'outlook!Office.IsAllDayEvent:interface'
           - name: Item
             uid: 'outlook!Office.Item:interface'
           - name: LocalClientTime
@@ -138,6 +142,8 @@ items:
             uid: 'outlook!Office.ReplyFormData:interface'
           - name: RoamingSettings
             uid: 'outlook!Office.RoamingSettings:interface'
+          - name: 敏感度
+            uid: 'outlook!Office.Sensitivity:interface'
           - name: SeriesTime
             uid: 'outlook!Office.SeriesTime:interface'
           - name: SharedProperties
@@ -260,7 +266,7 @@ items:
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: Error
+              - name: 错误
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -336,7 +342,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: Error
+              - name: 错误
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
