--- a/docs/docs-ref-autogen/outlook/outlook/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.appointmentcompose.yml
@@ -48,6 +48,7 @@ items:
       - 'outlook!Office.AppointmentCompose#getSelectedDataAsync:member(2)'
       - 'outlook!Office.AppointmentCompose#getSharedPropertiesAsync:member(1)'
       - 'outlook!Office.AppointmentCompose#getSharedPropertiesAsync:member(2)'
+      - 'outlook!Office.AppointmentCompose#isAllDayEvent:member'
       - 'outlook!Office.AppointmentCompose#isClientSignatureEnabledAsync:member(1)'
       - 'outlook!Office.AppointmentCompose#isClientSignatureEnabledAsync:member(2)'
       - 'outlook!Office.AppointmentCompose#itemType:member'
@@ -64,6 +65,7 @@ items:
       - 'outlook!Office.AppointmentCompose#requiredAttendees:member'
       - 'outlook!Office.AppointmentCompose#saveAsync:member(1)'
       - 'outlook!Office.AppointmentCompose#saveAsync:member(2)'
+      - 'outlook!Office.AppointmentCompose#sensitivity:member'
       - 'outlook!Office.AppointmentCompose#seriesId:member'
       - 'outlook!Office.AppointmentCompose#setSelectedDataAsync:member(1)'
       - 'outlook!Office.AppointmentCompose#setSelectedDataAsync:member(2)'
@@ -1455,6 +1457,51 @@ items:
           description: 方法完成后，使用单个参数类型调用在 callback 参数中传递的函数`Office.AsyncResult`<!-- -->. 结果`value`的属性是共享项的属性。
           type:
             - 'outlook!Office.AppointmentCompose#getSharedPropertiesAsync~1:complex'
+  - uid: 'outlook!Office.AppointmentCompose#isAllDayEvent:member'
+    summary: |-
+      获取或设置约会的[IsAllDayEvent](xref:outlook!Office.IsAllDayEvent:interface)属性。
+
+      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    remarks: |-
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：约会组织者
+
+      #### <a name="examples"></a>示例
+
+      ```javascript
+      // Set isAllDayEvent property.
+      Office.context.mailbox.item.isAllDayEvent.setAsync(
+          true,
+          function (asyncResult) {
+              if (asyncResult.status === Office.AsyncResultStatus.Failed) {
+                  console.log("Failed to set all-day event: " + JSON.stringify(asyncResult.error));
+              } else {
+                  console.log("Appointment set to all-day event.");
+              }
+          });
+
+      // Get isAllDayEvent property.
+      console.log(Office.context.mailbox.item.isAllDayEvent.getAsync(
+          function(asyncResult) {
+              if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+                  console.log("Is an all-day event? " + asyncResult.value);
+              } else {
+                  console.log("Failed to get if this is an all-day event. Error: " + JSON.stringify(asyncResult.error));
+              }
+          });
+      ```
+    isPreview: true
+    name: isAllDayEvent
+    fullName: isAllDayEvent
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'isAllDayEvent: IsAllDayEvent;'
+      return:
+        type:
+          - 'outlook!Office.IsAllDayEvent:interface'
   - uid: 'outlook!Office.AppointmentCompose#isClientSignatureEnabledAsync:member(1)'
     summary: |-
       获取客户端签名是否已启用。
@@ -2248,6 +2295,51 @@ items:
           description: 方法完成后，使用单个参数类型调用在 callback 参数中传递的函数`Office.AsyncResult`<!-- -->.
           type:
             - 'outlook!Office.AppointmentCompose#saveAsync~1:complex'
+  - uid: 'outlook!Office.AppointmentCompose#sensitivity:member'
+    summary: |-
+      获取或设置约会的[敏感度](xref:outlook!Office.Sensitivity:interface)。
+
+      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    remarks: |-
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：约会组织者
+
+      #### <a name="examples"></a>示例
+
+      ```javascript
+      // Set sensitivity property.
+      Office.context.mailbox.item.sensitivity.setAsync(
+          Office.MailboxEnums.AppointmentSensitivityType.Confidential,
+          function callback(asyncResult) {
+              if (asyncResult.status === Office.AsyncResultStatus.Failed) {
+                  console.log("Failed to set appointment sensitivity: " + JSON.stringify(asyncResult.error));
+              } else {
+                  console.log("Successfully set appointment sensitivity.");
+              }
+          });
+
+      // Get sensitivity property.
+      console.log(Office.context.mailbox.item.sensitivity.getAsync(
+          function(asyncResult) {
+              if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+                  console.log("Sensitivity: " + asyncResult.value);
+              } else {
+                  console.log("Failed to get sensitivity: " + JSON.stringify(asyncResult.error));
+              }
+          });
+      ```
+    isPreview: true
+    name: sensitivity
+    fullName: sensitivity
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'sensitivity: Sensitivity;'
+      return:
+        type:
+          - 'outlook!Office.Sensitivity:interface'
   - uid: 'outlook!Office.AppointmentCompose#seriesId:member'
     summary: |-
       获取实例所属的系列的 id。
@@ -2806,6 +2898,8 @@ references:
         fullName: Office.SharedProperties
       - name: '>) => void'
         fullName: '>) => void'
+  - uid: 'outlook!Office.IsAllDayEvent:interface'
+    name: IsAllDayEvent
   - uid: 'outlook!Office.AppointmentCompose#isClientSignatureEnabledAsync~0:complex'
     name: '(asyncResult: Office.AsyncResult<boolean>) => void'
     fullName: '(asyncResult: Office.AsyncResult<boolean>) => void'
@@ -2947,6 +3041,8 @@ references:
         fullName: Office.AsyncResult
       - name: <string>) => void
         fullName: <string>) => void
+  - uid: 'outlook!Office.Sensitivity:interface'
+    name: Sensitivity
   - uid: 'outlook!Office.AppointmentCompose#setSelectedDataAsync~0:complex'
     name: Office.AsyncContextOptions & CoercionTypeOptions
     fullName: Office.AsyncContextOptions & Office.CoercionTypeOptions
