commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.application.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.application.yml
@@ -366,7 +366,9 @@ items:
         description: ''
   - uid: 'excel!Excel.Application#suspendScreenUpdatingUntilNextSync:member(1)'
     summary: |-
-      在下一次调用“context.sync()”前暂停屏幕更新。
+      在调用下一步`context.sync()`之前挂起屏幕更新。
+
+      **注意**：请勿重复`suspendScreenUpdatingUntilNextSync`调用（如在循环中）。 重复调用将导致 Excel 窗口闪烁。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: suspendScreenUpdatingUntilNextSync()
