--- a/docs/docs-ref-autogen/outlook_1_3/outlook/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/outlook/office.appointmentcompose.yml
@@ -653,14 +653,6 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      // Get all notifications.
-      Office.context.mailbox.item.notificationMessages.getAllAsync(
-          function (asyncResult) {
-              console.log(JSON.stringify(asyncResult));
-          }
-      );
-      ```
-      ```javascript
       var id = $("#notificationId").val();
       var details =
         {
@@ -759,6 +751,19 @@ items:
                 apptOptionalAttendees[i].appointmentResponse
             );
           }
+        } else {
+          console.error(asyncResult.error);
+        }
+      });
+      ```
+      ```javascript
+      var email = $("#emailOptional")
+        .val()
+        .toString();
+      var emailArray = [email];
+      Office.context.mailbox.item.optionalAttendees.setAsync(emailArray, function(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+          console.log("Succeeded in setting optional attendees field.");
         } else {
           console.error(asyncResult.error);
         }
@@ -916,6 +921,19 @@ items:
                 apptRequiredAttendees[i].appointmentResponse
             );
           }
+        } else {
+          console.error(asyncResult.error);
+        }
+      });
+      ```
+      ```javascript
+      var email = $("#emailRequired")
+        .val()
+        .toString();
+      var emailArray = [email];
+      Office.context.mailbox.item.requiredAttendees.setAsync(emailArray, function(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+          console.log("Succeeded in setting required attendees field.");
         } else {
           console.error(asyncResult.error);
         }
