--- a/docs/docs-ref-autogen/outlook_1_7/outlook/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/outlook/office.appointmentcompose.yml
@@ -748,14 +748,6 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      // Get all notifications.
-      Office.context.mailbox.item.notificationMessages.getAllAsync(
-          function (asyncResult) {
-              console.log(JSON.stringify(asyncResult));
-          }
-      );
-      ```
-      ```javascript
       var id = $("#notificationId").val();
       var details =
         {
@@ -859,6 +851,19 @@ items:
         }
       });
       ```
+      ```javascript
+      var email = $("#emailOptional")
+        .val()
+        .toString();
+      var emailArray = [email];
+      Office.context.mailbox.item.optionalAttendees.setAsync(emailArray, function(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+          console.log("Succeeded in setting optional attendees field.");
+        } else {
+          console.error(asyncResult.error);
+        }
+      });
+      ```
     name: optionalAttendees
     fullName: optionalAttendees
     langs:
@@ -883,13 +888,6 @@ items:
 
       #### <a name="examples"></a>示例
 
-      ```javascript
-      Office.context.mailbox.item.organizer.getAsync(
-          function(asyncResult) {
-              console.log(JSON.stringify(asyncResult));
-          }
-      );
-      ```
       ```javascript
       Office.context.mailbox.item.organizer.getAsync(function(asyncResult) {
         if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
@@ -1190,6 +1188,19 @@ items:
         }
       });
       ```
+      ```javascript
+      var email = $("#emailRequired")
+        .val()
+        .toString();
+      var emailArray = [email];
+      Office.context.mailbox.item.requiredAttendees.setAsync(emailArray, function(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+          console.log("Succeeded in setting required attendees field.");
+        } else {
+          console.error(asyncResult.error);
+        }
+      });
+      ```
     name: requiredAttendees
     fullName: requiredAttendees
     langs:
@@ -1336,17 +1347,6 @@ items:
 
       #### <a name="examples"></a>示例
 
-      ```javascript
-      var seriesId = Office.context.mailbox.item.seriesId;
-
-      // The seriesId property returns null for items that do
-      // not have parent items (such as single appointments,
-      // series items, or meeting requests) and returns
-      // undefined for messages that are not meeting requests.
-      var isSeriesInstance = (seriesId != null);
-      console.log("SeriesId is " + seriesId 
-          + " and isSeriesInstance is " + isSeriesInstance);
-      ```
       ```javascript
       var seriesId = Office.context.mailbox.item.seriesId;
 
