--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.application.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.application.yml
@@ -300,7 +300,9 @@ items:
         description: ''
   - uid: 'excel!Excel.Application#suspendScreenUpdatingUntilNextSync:member(1)'
     summary: |-
-      在下一次调用“context.sync()”前暂停屏幕更新。
+      挂起屏幕更新，直到下一个`context.sync()`<!-- -->被调用。
+
+      **注意**：请勿重复`suspendScreenUpdatingUntilNextSync`调用（如在循环中）。 重复调用将导致 Excel 窗口闪烁。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: suspendScreenUpdatingUntilNextSync()
