--- a/docs/docs-ref-autogen/outlook_1_3/outlook/office.appointmentread.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/outlook/office.appointmentread.yml
@@ -445,11 +445,6 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      // The following example accesses the contacts entities in the current item's body.
-
-      var contacts = Office.context.mailbox.item.getEntities().contacts;
-      ```
-      ```javascript
       var entities = Office.context.mailbox.item.getEntities();
       var entityTypesFound = 0;
       if (entities.addresses.length > 0) {
@@ -516,22 +511,6 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      // The following example shows how to access an array of strings that represent
-      // postal addresses in the current item's body.
-
-      // The initialize function is required for all apps.
-      Office.initialize = function () {
-          // Checks for the DOM to load using the jQuery ready function.
-          $(document).ready(function () {
-              // After the DOM is loaded, app-specific code can run.
-              var item = Office.context.mailbox.item;
-              // Get an array of strings that represent postal addresses in the current item's body.
-              var addresses = item.getEntitiesByType(Office.MailboxEnums.EntityType.Address);
-              // Continue processing the array of addresses.
-          });
-      };
-      ```
-      ```javascript
       console.log(Office.context.mailbox.item.getEntitiesByType(Office.MailboxEnums.EntityType.Address));
       ```
     name: getEntitiesByType(entityType)
@@ -552,7 +531,7 @@ items:
 
             使用此方法的最小权限级别是`Restricted`<!-- -->，需要`ReadItem`访问一些实体类型，如下表所示。
 
-            <table> <tr> <th>EntityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>地址</td> <td>String</td> <td>受限</td> </tr> <tr> <td>Contact</td> <td>Contact</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>String</td> <td>受限</td> </tr> </table>
+            <table> <tr> <th>EntityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>地址</td> <td>字符串</td> <td>受限</td> </tr> <tr> <td>Contact</td> <td>Contact</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>字符串</td> <td>受限</td> </tr> </table>
           type:
             - 'outlook!Office.AppointmentRead#getEntitiesByType~1:complex'
   - uid: 'outlook!Office.AppointmentRead#getFilteredEntitiesByName:member(1)'
@@ -940,14 +919,6 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      // Get all notifications.
-      Office.context.mailbox.item.notificationMessages.getAllAsync(
-          function (asyncResult) {
-              console.log(JSON.stringify(asyncResult));
-          }
-      );
-      ```
-      ```javascript
       var id = $("#notificationId").val();
       var details =
         {
@@ -1020,10 +991,6 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var optionalAttendees = Office.context.mailbox.item.optionalAttendees;
-      console.log("Optional attendees: " + JSON.stringify(optionalAttendees));
-      ```
-      ```javascript
       var apptOptionalAttendees = Office.context.mailbox.item.optionalAttendees;
       console.log("Optional attendees:");
       for (var i = 0; i < apptOptionalAttendees.length; i++) {
@@ -1056,11 +1023,6 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var organizerName = Office.context.mailbox.item.organizer.displayName;
-      var organizerAddress = Office.context.mailbox.item.organizer.emailAddress;
-      console.log("Organizer: " + organizerName + " (" + organizerAddress + ")");
-      ```
-      ```javascript
       var apptOrganizer = Office.context.mailbox.item.organizer;
       console.log("Organizer: " + apptOrganizer.displayName + " (" + apptOrganizer.emailAddress + ")");
       ```
@@ -1086,10 +1048,6 @@ items:
 
       #### <a name="examples"></a>示例
 
-      ```javascript
-      var requiredAttendees = Office.context.mailbox.item.requiredAttendees;
-      console.log("Required attendees: " + JSON.stringify(requiredAttendees));
-      ```
       ```javascript
       var apptRequiredAttendees = Office.context.mailbox.item.requiredAttendees;
       console.log("Required attendees:");
