--- a/docs/docs-ref-autogen/outlook_1_7/outlook/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/outlook/office.messagecompose.yml
@@ -10,7 +10,7 @@ items:
 
       - [ItemCompose](xref:outlook!Office.ItemCompose:interface)
 
-      - [Message](xref:outlook!Office.Message:interface)
+      - [消息](xref:outlook!Office.Message:interface)
     name: Office.MessageCompose
     fullName: Office.MessageCompose
     langs:
@@ -436,10 +436,23 @@ items:
       Office.context.mailbox.item.bcc.getAsync(function(asyncResult) {
         if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
           var msgBcc = asyncResult.value;
-          console.log("Message being bcc'd to:");
+          console.log("Message being blind-copied to:");
           for (var i = 0; i < msgBcc.length; i++) {
             console.log(msgBcc[i].displayName + " (" + msgBcc[i].emailAddress + ")");
           }
+        } else {
+          console.error(asyncResult.error);
+        }
+      });
+      ```
+      ```javascript
+      var email = $("#emailBcc")
+        .val()
+        .toString();
+      var emailArray = [email];
+      Office.context.mailbox.item.bcc.setAsync(emailArray, function(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+          console.log("Succeeded in setting Bcc field.");
         } else {
           console.error(asyncResult.error);
         }
@@ -531,6 +544,19 @@ items:
         }
       });
       ```
+      ```javascript
+      var email = $("#emailCc")
+        .val()
+        .toString();
+      var emailArray = [email];
+      Office.context.mailbox.item.cc.setAsync(emailArray, function(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+          console.log("Succeeded in setting Cc field.");
+        } else {
+          console.error(asyncResult.error);
+        }
+      });
+      ```
     name: cc
     fullName: cc
     langs:
@@ -617,13 +643,6 @@ items:
 
       #### <a name="examples"></a>示例
 
-      ```javascript
-      Office.context.mailbox.item.from.getAsync(callback);
-
-      function callback(asyncResult) {
-          var from = asyncResult.value;
-      }
-      ```
       ```javascript
       Office.context.mailbox.item.from.getAsync(function(asyncResult) {
         if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
@@ -865,14 +884,6 @@ items:
 
       #### <a name="examples"></a>示例
 
-      ```javascript
-      // Get all notifications.
-      Office.context.mailbox.item.notificationMessages.getAllAsync(
-          function (asyncResult) {
-              console.log(JSON.stringify(asyncResult));
-          }
-      );
-      ```
       ```javascript
       var id = $("#notificationId").val();
       var details =
@@ -1215,17 +1226,6 @@ items:
       ```javascript
       var seriesId = Office.context.mailbox.item.seriesId;
 
-      // The seriesId property returns null for items that do
-      // not have parent items (such as single appointments,
-      // series items, or meeting requests) and returns
-      // undefined for messages that are not meeting requests.
-      var isSeriesInstance = (seriesId != null);
-      console.log("SeriesId is " + seriesId 
-          + " and isSeriesInstance is " + isSeriesInstance);
-      ```
-      ```javascript
-      var seriesId = Office.context.mailbox.item.seriesId;
-
       if (seriesId === undefined) {
         console.log("This is a message that's not a meeting request.");
       } else if (seriesId === null) {
@@ -1403,6 +1403,19 @@ items:
           for (var i = 0; i < msgTo.length; i++) {
             console.log(msgTo[i].displayName + " (" + msgTo[i].emailAddress + ")");
           }
+        } else {
+          console.error(asyncResult.error);
+        }
+      });
+      ```
+      ```javascript
+      var email = $("#emailTo")
+        .val()
+        .toString();
+      var emailArray = [email];
+      Office.context.mailbox.item.to.setAsync(emailArray, function(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+          console.log("Succeeded in setting To field.");
         } else {
           console.error(asyncResult.error);
         }
