--- a/docs/docs-ref-autogen/outlook_1_8/outlook/office.messageread.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/outlook/office.messageread.yml
@@ -10,7 +10,7 @@ items:
 
       - [ItemRead](xref:outlook!Office.ItemRead:interface)
 
-      - [邮件](xref:outlook!Office.Message:interface)
+      - [消息](xref:outlook!Office.Message:interface)
     name: Office.MessageRead
     fullName: Office.MessageRead
     langs:
@@ -247,22 +247,61 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      Office.context.mailbox.item.categories.getAsync(function (asyncResult) {
-          if (asyncResult.status === Office.AsyncResultStatus.Failed) {
-              console.log("Action failed with error: " + asyncResult.error.message);
+      Office.context.mailbox.item.categories.getAsync(function(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+          var categories = asyncResult.value;
+          if (categories && categories.length > 0) {
+            console.log("Categories assigned to this item:");
+            console.log(JSON.stringify(categories));
           } else {
-              console.log("Categories: " + JSON.stringify(asyncResult.value));
+            console.log("There are no categories assigned to this item.");
           }
+        } else {
+          console.error(asyncResult.error);
+        }
+      });
+      ```
+      ```javascript
+      // Note: In order for you to successfully add a category,
+      // it must be in the mailbox categories master list.
+
+      Office.context.mailbox.masterCategories.getAsync(function(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+          var masterCategories = asyncResult.value;
+          if (masterCategories && masterCategories.length > 0) {
+            // Grab the first category from the master list.
+            var categoryToAdd = [masterCategories[0].displayName];
+            Office.context.mailbox.item.categories.addAsync(categoryToAdd, function(asyncResult) {
+              if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+                console.log(`Successfully assigned category '${categoryToAdd}' to item.`);
+              } else {
+                console.log("categories.addAsync call failed with error: " + asyncResult.error.message);
+              }
+            });
+          } else {
+            console.log("There are no categories in the master list on this mailbox. You can add categories using Office.context.mailbox.masterCategories.addAsync.");
+          }
+        } else {
+          console.error(asyncResult.error);
+        }
       });
       ```
       ```javascript
       Office.context.mailbox.item.categories.getAsync(function(asyncResult) {
         if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
           var categories = asyncResult.value;
-          if (categories) {
-            console.log(categories);
+          if (categories && categories.length > 0) {
+            // Grab the first category assigned to this item.
+            var categoryToRemove = [categories[0].displayName];
+            Office.context.mailbox.item.categories.removeAsync(categoryToRemove, function(asyncResult) {
+              if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+                console.log(`Successfully unassigned category '${categoryToRemove}' from this item.`);
+              } else {
+                console.log("categories.removeAsync call failed with error: " + asyncResult.error.message);
+              }
+            });
           } else {
-            console.log("There are no categories.");
+            console.log("There are no categories assigned to this item.");
           }
         } else {
           console.error(asyncResult.error);
@@ -291,9 +330,6 @@ items:
 
       #### <a name="examples"></a>示例
 
-      ```javascript
-      console.log(JSON.stringify(Office.context.mailbox.item.cc));
-      ```
       ```javascript
       var msgCc = Office.context.mailbox.item.cc;
       console.log("Message copied to:");
@@ -653,10 +689,6 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var from = Office.context.mailbox.item.from;
-      console.log("From " + from);
-      ```
-      ```javascript
       var msgFrom = Office.context.mailbox.item.from;
       console.log("Message received from: " + msgFrom.displayName + " (" + msgFrom.emailAddress + ")");
       ```
@@ -782,15 +814,19 @@ items:
           switch (result.value.format) {
               case Office.MailboxEnums.AttachmentContentFormat.Base64:
                   // Handle file attachment.
+                  console.log(result.value.content);
                   break;
               case Office.MailboxEnums.AttachmentContentFormat.Eml:
                   // Handle email item attachment.
+                  console.log("Attachment is a message.");
                   break;
               case Office.MailboxEnums.AttachmentContentFormat.ICalendar:
                   // Handle .icalender attachment.
+                  console.log("Attachment is a calendar item.");
                   break;
               case Office.MailboxEnums.AttachmentContentFormat.Url:
                   // Handle cloud attachment.
+                  console.log("Attachment is a cloud attachment.");
                   break;
               default:
                   // Handle attachment formats that are not supported.
@@ -838,46 +874,6 @@ items:
       - `AttachmentTypeNotSupported`<!-- -->：不支持该附件类型。 不受支持的类型包括 Rtf 格式的嵌入图像或电子邮件或日历项目（如联系人或任务项）以外的项附件类型。
 
       - `InvalidAttachmentId`<!-- -->：附件标识符不存在。
-
-      #### <a name="examples"></a>示例
-
-      ```javascript
-      var item = Office.context.mailbox.item;
-      var options = {asyncContext: {currentItem: item}};
-      item.getAttachmentsAsync(options, callback);
-
-      function callback(result) {
-          if (result.value.length > 0) {
-              for (i = 0 ; i < result.value.length ; i++) {
-                  result.asyncContext.currentItem.getAttachmentContentAsync(result.value[i].id, handleAttachmentsCallback);
-              }
-          }
-      }
-
-      function handleAttachmentsCallback(result) {
-          // Parse string to be a url, an .eml file, a base64-encoded string, or an .icalendar file.
-          switch (result.value.format) {
-              case Office.MailboxEnums.AttachmentContentFormat.Base64:
-                  // Handle file attachment.
-                  console.log(result.value.content);
-                  break;
-              case Office.MailboxEnums.AttachmentContentFormat.Eml:
-                  // Handle email item attachment.
-                  console.log("Attachment is a message.");
-                  break;
-              case Office.MailboxEnums.AttachmentContentFormat.ICalendar:
-                  // Handle .icalender attachment.
-                  console.log("Attachment is a calendar item.");
-                  break;
-              case Office.MailboxEnums.AttachmentContentFormat.Url:
-                  // Handle cloud attachment.
-                  console.log("Attachment is a cloud attachment.");
-                  break;
-              default:
-                  // Handle attachment formats that are not supported.
-          }
-      }
-      ```
     name: 'getAttachmentContentAsync(attachmentId, callback)'
     fullName: 'getAttachmentContentAsync(attachmentId, callback)'
     langs:
@@ -910,11 +906,6 @@ items:
 
       #### <a name="examples"></a>示例
 
-      ```javascript
-      // The following example accesses the contacts entities in the current item's body.
-
-      var contacts = Office.context.mailbox.item.getEntities().contacts;
-      ```
       ```javascript
       var entities = Office.context.mailbox.item.getEntities();
       var entityTypesFound = 0;
@@ -982,22 +973,6 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      // The following example shows how to access an array of strings that represent postal addresses
-      // in the current item's body.
-
-      // The initialize function is required for all apps.
-      Office.initialize = function () {
-          // Checks for the DOM to load using the jQuery ready function.
-          $(document).ready(function () {
-              // After the DOM is loaded, app-specific code can run.
-              var item = Office.context.mailbox.item;
-              // Get an array of strings that represent postal addresses in the current item's body.
-              var addresses = item.getEntitiesByType(Office.MailboxEnums.EntityType.Address);
-              // Continue processing the array of addresses.
-          });
-      };
-      ```
-      ```javascript
       console.log(Office.context.mailbox.item.getEntitiesByType(Office.MailboxEnums.EntityType.Address));
       ```
     name: getEntitiesByType(entityType)
@@ -1018,7 +993,7 @@ items:
 
             使用此方法的最小权限级别是`Restricted`<!-- -->，需要`ReadItem`访问一些实体类型，如下表所示。
 
-            <table> <tr> <th>EntityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>地址</td> <td>String</td> <td>受限</td> </tr> <tr> <td>Contact</td> <td>Contact</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>String</td> <td>受限</td> </tr> </table>
+            <table> <tr> <th>EntityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>地址</td> <td>字符串</td> <td>受限</td> </tr> <tr> <td>Contact</td> <td>Contact</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>字符串</td> <td>受限</td> </tr> </table>
           type:
             - 'outlook!Office.MessageRead#getEntitiesByType~1:complex'
   - uid: 'outlook!Office.MessageRead#getFilteredEntitiesByName:member(1)'
@@ -1178,11 +1153,6 @@ items:
 
       #### <a name="examples"></a>示例
 
-      ```javascript
-      // The following example accesses the addresses entities in the highlighted
-      // match selected by the user.
-      var addresses = Office.context.mailbox.item.getSelectedEntities().addresses;
-      ```
       ```javascript
       var entities = Office.context.mailbox.item.getSelectedEntities();
       var entityTypesFound = 0;
@@ -1388,14 +1358,6 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      Office.context.mailbox.item.getSharedPropertiesAsync(callback);
-
-      function callback (asyncResult) {
-          var context = asyncResult.context;
-          var sharedProperties = asyncResult.value;
-      }
-      ```
-      ```javascript
       if (!Office.context.mailbox.item.getSharedPropertiesAsync) {
         console.error("Try this sample on a message from a shared folder.");
         return;
@@ -1456,7 +1418,7 @@ items:
 
       `itemClass` 属性指定所选项目的邮件类别。以下是邮件或约会项目的默认邮件类别。
 
-      <table> <tr> <th>类型</th> <th>Description</th> <th>Item 类</th> </tr> <tr> <td>约会项目</td> <td>这些是项目类 IPM 的日历项目。约会或 IPM。约会。</td> <td>IPM.NOTE.约会、IPM。约会事件</td> </tr> <tr> <td>邮件项目</td> <td>其中包括具有默认邮件类别 IPM 的电子邮件。注意，以及使用 IPM 的会议请求、响应和取消。Schedule：作为基本邮件类的会议。</td> <td>IPM.NOTE.请注意，IPM。Schedule （会议）请求，IPM。Schedule. Neg、IPM。Schedule、IPM、IPM。日程安排：会议，IPM。日程安排. 会议. 已取消</td> </tr> </table>
+      <table> <tr> <th>类型</th> <th>说明</th> <th>Item 类</th> </tr> <tr> <td>约会项目</td> <td>这些是项目类 IPM 的日历项目。约会或 IPM。约会。</td> <td>IPM.NOTE.约会、IPM。约会事件</td> </tr> <tr> <td>邮件项目</td> <td>其中包括具有默认邮件类别 IPM 的电子邮件。注意，以及使用 IPM 的会议请求、响应和取消。Schedule：作为基本邮件类的会议。</td> <td>IPM.NOTE.请注意，IPM。Schedule （会议）请求，IPM。Schedule. Neg、IPM。Schedule、IPM、IPM。日程安排：会议，IPM。日程安排. 会议. 已取消</td> </tr> </table>
 
       #### <a name="examples"></a>示例
 
@@ -1679,14 +1641,6 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      // Get all notifications.
-      Office.context.mailbox.item.notificationMessages.getAllAsync(
-          function (asyncResult) {
-              console.log(JSON.stringify(asyncResult));
-          }
-      );
-      ```
-      ```javascript
       var id = $("#notificationId").val();
       var details =
         {
@@ -1764,10 +1718,6 @@ items:
 
       #### <a name="examples"></a>示例
 
-      ```javascript
-      var recurrence = Office.context.mailbox.item.recurrence;
-      console.log("Recurrence: " + JSON.stringify(recurrence));
-      ```
       ```javascript
       var recurrence = Office.context.mailbox.item.recurrence;
 
@@ -1870,11 +1820,6 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var senderName = Office.context.mailbox.item.sender.displayName;
-      var senderAddress = Office.context.mailbox.item.sender.emailAddress;
-      console.log("Sender: " + senderName + " (" + senderAddress + ")");
-      ```
-      ```javascript
       var msgSender = Office.context.mailbox.item.sender;
       console.log("Sender: " + msgSender.displayName + " (" + msgSender.emailAddress + ")");
       ```
@@ -1906,17 +1851,6 @@ items:
 
       #### <a name="examples"></a>示例
 
-      ```javascript
-      var seriesId = Office.context.mailbox.item.seriesId;
-
-      // The seriesId property returns null for items that do
-      // not have parent items (such as single appointments,
-      // series items, or meeting requests) and returns
-      // undefined for messages that are not meeting requests.
-      var isSeriesInstance = (seriesId != null);
-      console.log("SeriesId is " + seriesId 
-          + " and isSeriesInstance is " + isSeriesInstance);
-      ```
       ```javascript
       var seriesId = Office.context.mailbox.item.seriesId;
 
@@ -2009,9 +1943,6 @@ items:
 
       #### <a name="examples"></a>示例
 
-      ```javascript
-      console.log(JSON.stringify(Office.context.mailbox.item.to));
-      ```
       ```javascript
       var msgTo = Office.context.mailbox.item.to;
       console.log("Message sent to:");
