--- a/docs/docs-ref-autogen/outlook_1_1/outlook/office.messageread.yml
+++ b/docs/docs-ref-autogen/outlook_1_1/outlook/office.messageread.yml
@@ -613,7 +613,7 @@ items:
 
             使用此方法的最小权限级别是`Restricted`<!-- -->，需要`ReadItem`访问一些实体类型，如下表所示。
 
-            <table> <tr> <th>EntityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>地址</td> <td>字符串</td> <td>受限</td> </tr> <tr> <td>Contact</td> <td>Contact</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>字符串</td> <td>受限</td> </tr> </table>
+            <table> <tr> <th>EntityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>地址</td> <td>String</td> <td>受限</td> </tr> <tr> <td>Contact</td> <td>Contact</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>String</td> <td>受限</td> </tr> </table>
           type:
             - 'outlook!Office.MessageRead#getEntitiesByType~1:complex'
   - uid: 'outlook!Office.MessageRead#getFilteredEntitiesByName:member(1)'
@@ -769,8 +769,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var internetMessageId = Office.context.mailbox.item.internetMessageId;
-      console.log("internetMessageId: " + internetMessageId);
+      console.log(`Internet message ID: ${Office.context.mailbox.item.internetMessageId}`);
       ```
     name: internetMessageId
     fullName: internetMessageId
@@ -799,8 +798,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var itemClass = Office.context.mailbox.item.itemClass;
-      console.log("Item class: " + itemClass);
+      console.log(`Item class: ${Office.context.mailbox.item.itemClass}`);
       ```
     name: itemClass
     fullName: itemClass
@@ -863,11 +861,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      if (Office.context.mailbox.item.itemType === Office.MailboxEnums.ItemType.Message) {
-          // Do something.
-      } else {
-          // Do something else.
-      }
+      console.log(`Item type: ${Office.context.mailbox.item.itemType}`);
       ```
     name: itemType
     fullName: itemType
@@ -1041,6 +1035,12 @@ items:
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：邮件已阅读
+
+      #### <a name="examples"></a>示例
+
+      ```javascript
+      console.log(`Appointment starts: ${Office.context.mailbox.item.start}`);
+      ```
     name: start
     fullName: start
     langs:
@@ -1066,20 +1066,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      // The following JavaScript code example shows how to access the
-      // `subject` property of the current item in Outlook.
-
-      // The initialize function is required for all apps.
-      Office.initialize = function () {
-          // Checks for the DOM to load using the jQuery ready function.
-          $(document).ready(function () {
-              // After the DOM is loaded, app-specific code can run.
-              var item = Office.context.mailbox.item;
-              var subject = item.subject;
-              // Continue with processing the subject of the current item,
-              // which can be a message or appointment.
-          });
-      };
+      console.log(`Subject: ${Office.context.mailbox.item.subject}`);
       ```
     name: subject
     fullName: subject
