--- a/docs/docs-ref-autogen/outlook_1_8/outlook/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/outlook/office.appointmentcompose.yml
@@ -1257,11 +1257,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      if (Office.context.mailbox.item.itemType === Office.MailboxEnums.ItemType.Appointment) {
-          // Do something.
-      } else {
-          // Do something else.
-      }
+      console.log(`Item type: ${Office.context.mailbox.item.itemType}`);
       ```
     name: itemType
     fullName: itemType
@@ -2124,20 +2120,23 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      // The following example sets the start time of an appointment in compose mode by
-      // using the `setAsync` method of the `Time` object.
-      var startTime = new Date("3/14/2015");
-      var options = {
-          // Pass information that can be used in the callback.
-          asyncContext: {verb: "Set"}
-      };
-      Office.context.mailbox.item.start.setAsync(startTime, options, function(result) {
-          if (result.error) {
-              console.debug(result.error);
-          } else {
-              // Access the asyncContext that was passed to the setAsync function.
-              console.debug("Start Time " + result.asyncContext.verb);
-          }
+      Office.context.mailbox.item.start.getAsync((result) => {
+        if (result.status !== Office.AsyncResultStatus.Succeeded) {
+          console.error(`Action failed with message ${result.error.message}`);
+          return;
+        }
+        console.log(`Appointment starts: ${result.value}`);
+      });
+      ```
+      ```javascript
+      var start = new Date(); // Represents current date and time.
+      start.setDate(start.getDate() + 2); // Add 2 days to current date.
+      Office.context.mailbox.item.start.setAsync(start, (result) => {
+        if (result.status !== Office.AsyncResultStatus.Succeeded) {
+          console.error(`Action failed with message ${result.error.message}`);
+          return;
+        }
+        console.log(`Successfully set start date and time to ${start}`);
       });
       ```
     name: start
@@ -2165,11 +2164,23 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      Office.context.mailbox.item.subject.getAsync(callback);
-
-      function callback(asyncResult) {
-          var subject = asyncResult.value;
-      }
+      Office.context.mailbox.item.subject.getAsync((result) => {
+        if (result.status !== Office.AsyncResultStatus.Succeeded) {
+          console.error(`Action failed with message ${result.error.message}`);
+          return;
+        }
+        console.log(`Subject: ${result.value}`);
+      });
+      ```
+      ```javascript
+      let subject = "Hello World!";
+      Office.context.mailbox.item.subject.setAsync(subject, (result) => {
+        if (result.status !== Office.AsyncResultStatus.Succeeded) {
+          console.error(`Action failed with message ${result.error.message}`);
+          return;
+        }
+        console.log(`Successfully set subject to ${subject}`);
+      });
       ```
     name: subject
     fullName: subject
