commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel/excel.closebehavior.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.closebehavior.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.CloseBehavior:enum'
     summary: |-
-      <span data-ttu-id="7990f-101">指定工作簿的关闭行为。关闭 API。</span><span class="sxs-lookup"><span data-stu-id="7990f-101">Specifies the close behavior for Workbook.close API.</span></span>
+      指定工作簿的关闭行为。关闭 API。
 
-      <span data-ttu-id="7990f-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7990f-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.CloseBehavior
     fullName: Excel.CloseBehavior
     langs:
@@ -15,7 +15,7 @@ items:
       - 'excel!Excel.CloseBehavior.save:member'
       - 'excel!Excel.CloseBehavior.skipSave:member'
   - uid: 'excel!Excel.CloseBehavior.save:member'
-    summary: <span data-ttu-id="7990f-103">在关闭工作簿之前保存可能的更改。</span><span class="sxs-lookup"><span data-stu-id="7990f-103">Save the possible changes before closing the workbook.</span></span>
+    summary: 在关闭工作簿之前保存可能的更改。
     name: save
     fullName: save
     langs:
@@ -23,7 +23,7 @@ items:
     type: field
     numericValue: '"Save"'
   - uid: 'excel!Excel.CloseBehavior.skipSave:member'
-    summary: <span data-ttu-id="7990f-104">在关闭工作簿时放弃可能的更改。</span><span class="sxs-lookup"><span data-stu-id="7990f-104">Discard the possible changes when closing the workbook.</span></span>
+    summary: 在关闭工作簿时放弃可能的更改。
     name: skipSave
     fullName: skipSave
     langs:
